2005-06-24  Mark Kettenis  <kettenis@gnu.org>

	* ppcobsd-nat.c: Include "gdbcore.h", <sys/signal.h>,
	<machine/frame.h>, <machine/pcb.h> and "bsd-kvm.h".
	(ppcobsd_supply_pcb): New function.
	(_initialize_ppcobsd_nat): Enable libkvm interface.
	* Makefile.in (ppcobsd-nat.o): Update dependencies.
	* config/powerpc/obsd.mh (NATDEPFILES): Add bsd-kvm.o.
	(LOADLIBES): New variable.

2005-06-24  Corinna Vinschen  <vinschen@redhat.com>

	* i386-tdep.c (struct i386_frame_cache): Define sp_offset as LONGEST.

2005-06-23  Andreas Schwab  <schwab@suse.de>

	* gdb_ptrace.h: Fix typos when checking for PT_ATTACH.  Reported
	by Chad Harrington <harrington.chad@gmail.com>.

2005-06-22  Mark Kettenis  <kettenis@gnu.org>

	* remote.c (extended_remote_restart): Pass buffer in call to
	xsnprintf instead of a pointer to the buffer.

2005-06-21  Andrew Cagney  <cagney@gnu.org>

	* MAINTAINERS: List GDB's Steering Committee as responsible for
	GDB's maintenance.

2005-06-21  Mark Kettenis  <kettenis@gnu.org>

	* inf-ttrace.c (inf_ttrace_xfer_partial): Change type of readbuf
	and writebuf arguments to `gdb_byte *'.

2005-06-21  Wu Zhou  <woodzltc@cn.ibm.com>

	* MAINTAINERS (Write After Approval): Add myself.

2005-06-20  Mark Kettenis  <kettenis@gnu.org>

	* hppabsd-tdep.c: Include "symtab.h", "objfiles.h", "target.h",
	"value.h" and "elf/common.h".
	(hppabsd_supply_gregset): Use `gdb_byte *' for byte buffer.
	(hppabsd_find_global_pointer): New function.
	(hppabsd_init_abi): Set TDEP->find_global_pointer to
	hppabsd_find_global_pointer.
	* Makefile.in (hppabsd-tdep.o): Update dependencies.

2005-06-12  Mark Kettenis  <kettenis@gnu.org>

	* hppa-tdep.c (hppa_pointer_to_address_hack): Remove function.
	(unwind_command): Use %lx to print pointer.

2005-06-19  Mark Kettenis  <kettenis@gnu.org>

	* remote-sim.c (gdbsim_xfer_inferior_memory): Remove prototype.
	Change type of second argument to`gdb_byte *'.

2005-06-19  Nick Roberts  <nickrob@snap.net.nz>
